rewrite router name and added model in swagger
